--- a/coolbeans/coolbeansapp/templates/navbar.html
+++ b/coolbeans/coolbeansapp/templates/navbar.html
@@ -20,7 +20,7 @@
         </li>
         
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'history' %}">
               Order History
             </a>
         </li>
