--- a/coolbeans/coolbeansapp/templates/navbar.html
+++ b/coolbeans/coolbeansapp/templates/navbar.html
@@ -14,7 +14,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'product' %}">
+            <a class="nav-link" href="{% url 'product_list' %}">
               Products
             </a>
         </li>
