--- a/coolbeans/coolbeansapp/templates/product_list.html
+++ b/coolbeans/coolbeansapp/templates/product_list.html
@@ -1,19 +1,17 @@
 {% extends 'main.html' %}
    {% block content %}
    <h1> Products </h1>
-      <div class="container">
-      <div class="row">
       <ul>
-      <!-- Iterate over object_list -->
+      <!-- Iterate over objec productt_list and displaying what -->
       {% for products in product_list %}
-      <div class="container">
+      <div class="container m-5">
          <div class="row">
      
-            <div class="card bg-secondary">
+            <div class="card p-5">
                {% comment %}
-               {% if %} <li><img src="{{products.image.url }}" height="300px", width="400px"> </li> 
-               {% elif %}<li><h1> {{ products.id}}</h1></li>
-               {% endif %} {% endcomment %}
+               <li><img src="{{products.image.url }}" height="300px", width="400px"> </li> 
+               
+               {% endcomment %}
                <div class="card-body">
                   <li><h2 class="card-title">{{ products.name }}<h2></li>
                   <li class="card-text"> {{ products.description }}></li>
@@ -27,5 +25,6 @@
       
       {% endfor %}
 
-   </ul>
+      </ul>
+   <h5> We're alway adding new products so check back soon!<h5>
    {% endblock %}
