--- a/coolbeans/coolbeansapp/templates/navbar.html
+++ b/coolbeans/coolbeansapp/templates/navbar.html
@@ -25,7 +25,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'about' %} ">
               About
             </a>
         </li>
