--- a/coolbeans/coolbeansapp/templates/receipt.html
+++ b/coolbeans/coolbeansapp/templates/receipt.html
@@ -4,15 +4,35 @@
 {% block content%}
 
 {% load static %} 
-
+<center>
 <h1>Receipt</h1>
 
-<h2>{{order.id}}</h2>
+<h2>Order Number: {{order.id}}</h2>
 
 <h2>{{order.date}}</h2>
 
 <h2>{{order.status}}</h2>
-
+<table class="table table-sm">
+    <tr>
+      <th>product</th>
+      <th>date</th>
+      <th>status</th>
+      <th>quantity</th>
+      <th>total</th>
+    </tr>
+    {% for item in items %}
+    <tr>
+      <td>{{item.product}}</td>
+      <td>{{order.date}}</td>
+      <td>{{order.status}}</td>
+      <td>{{item.quantity}}</td>
+      <td>${{item.get_total}}0</td>
+    </tr>
+    {% endfor %}
+        
+</table>
+        <h3>Total Price: ${{order.get_total}}0 </h3>
+</center>
 <h2></h2>
 
 {% endblock %}
