--- a/coolbeans/coolbeansapp/templates/order.html
+++ b/coolbeans/coolbeansapp/templates/order.html
@@ -10,7 +10,7 @@
        {{ form.as_p }}
         {{ formset.as_p}}
        {% csrf_token %}
-       <button type="submit" >Purchase Order</button>
+       <button class="btn btn-primary btn-lg" type="submit" >Purchase Order</button>
    </form>
 
 
