--- a/coolbeans/coolbeansapp/templates/receipt.html
+++ b/coolbeans/coolbeansapp/templates/receipt.html
@@ -14,11 +14,11 @@
 <h2>{{order.status}}</h2>
 <table class="table table-sm">
     <tr>
-      <th>product</th>
-      <th>date</th>
-      <th>status</th>
-      <th>quantity</th>
-      <th>total</th>
+      <th>Product</th>
+      <th>Date</th>
+      <th>Status</th>
+      <th>Quantity</th>
+      <th>Total</th>
     </tr>
     {% for item in items %}
     <tr>
