--- a/coolbeans/coolbeansapp/templates/main.html
+++ b/coolbeans/coolbeansapp/templates/main.html
@@ -15,7 +15,7 @@
       
     
     {% comment %}
-    Commen
+    Commented out bootstrap javascript -- we weren't using it or allowed to use it anyway, why load it?
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     {% endcomment %}
     </body>
